--- a/index.html
+++ b/index.html
@@ -45,10 +45,10 @@
         
         <!-- Logo --> 
         <a href="index.html" class="bg-dark-2 rounded-pill p-2 mt-lg-2 mb-lg-2 d-none d-lg-inline-block">
-        	<img class="img-fluid rounded-pill d-block" src="images/web-developer-160x160-dark.jpg" title="I'm David" alt="">
+        	<img class="img-fluid rounded-pill d-block" src="images/hugo160x160.png" title="I'm David" alt="">
         </a>
         <a class="logo text-center text-capitalize d-lg-block mb-lg-4" href="index.html" title="Doon">
-        	<h1 class="text-6 text-white mb-0">Mr. David</h1>
+        	<h1 class="text-6 text-white mb-0">Hugo</h1>
         </a> 
         <!-- Logo End -->
         
@@ -153,20 +153,20 @@
             </div>
             <div class="col-6 col-md-3">
               <div class="featured-box text-center">
-                <h4 class="text-12 text-muted mb-0"><span class="counter" data-from="0" data-to="356">356</span></h4>
-                <p class="text-3 text-light mb-0">Happy Clients</p>
+                <h4 class="text-12 text-muted mb-0"><span class="counter" data-from="0" data-to="1">1</span></h4>
+                <p class="text-3 text-light mb-0">Research publication</p>
               </div>
             </div>
             <div class="col-6 col-md-3">
               <div class="featured-box text-center">
-                <h4 class="text-12 text-muted mb-0"><span class="counter" data-from="0" data-to="793">793</span></h4>
-                <p class="text-3 text-light mb-0">Projects Done</p>
+                <h4 class="text-12 text-muted mb-0"><span class="counter" data-from="0" data-to="3">3</span></h4>
+                <p class="text-3 text-light mb-0">Websites I worked on</p>
               </div>
             </div>
             <div class="col-6 col-md-3">
               <div class="featured-box text-center">
-                <h4 class="text-12 text-muted mb-0"><span class="counter" data-from="0" data-to="38">38</span></h4>
-                <p class="text-3 text-light mb-0">Get Awards</p>
+                <h4 class="text-12 text-muted mb-0"><span class="counter" data-from="0" data-to="6">6</span></h4>
+                <p class="text-3 text-light mb-0">students</p>
               </div>
             </div>
           </div>
@@ -211,7 +211,7 @@
       <div class="container px-lg-4 px-xl-5">
         <div class="row">
           <div class="col-lg-9 mx-auto text-center">
-            <h2 class="text-8 text-white font-weight-600 line-height-4 mb-5">You can see here some of my most recent design projects.</h2>
+            <h2 class="text-8 text-white font-weight-600 line-height-4 mb-5">You can see here some of my most recent projects.</h2>
           </div>
         </div>
         <div class="popup-ajax-gallery">
@@ -219,12 +219,12 @@
             <div class="row no-gutters">
               <div class="col-lg-6 align-self-center order-1 order-lg-0">
                 <div class="p-5">
-                  <div class="badge badge-info text-1 font-weight-500 px-3 py-2 rounded-pill mb-3">Category</div>
-                  <h3 class="text-10 text-white font-weight-700 mb-3">Project Title</h3>
-                  <p class="text-3 text-muted mb-4">Quidam persius interesset his et, in quot quidam persequeris vim, ad mea essent possim iriure. persius interesset his et, in quot quidam persequeris.</p>
+                  <div class="badge badge-info text-1 font-weight-500 px-3 py-2 rounded-pill mb-3">Website</div>
+                  <h3 class="text-10 text-white font-weight-700 mb-3">Le Mas des Fées' website</h3>
+                  <p class="text-3 text-muted mb-4">Professional WordPress website developped from scratch. Charming guesthouse in the south of France, near Avignon. Using Sailing theme, Yoast SEO, Elementor, Slider Revolution and more.</p>
                   <a href="ajax/portfolio-ajax-project-1-dark.html" class="btn btn-light popup-ajax">See more</a> </div>
               </div>
-              <div class="col-lg-6 align-self-center order-0 order-lg-1"> <img class="img-fluid d-block rounded" src="images/projects/project-1.jpg" alt=""> </div>
+              <div class="col-lg-6 align-self-center order-0 order-lg-1"> <img class="img-fluid d-block rounded" src="images/projects/lmdf_capture" alt=""> </div>
             </div>
           </div>
           <div class="bg-dark shadow-sm rounded mb-5">
