--- a/ajax/portfolio-ajax-project-1-dark.html
+++ b/ajax/portfolio-ajax-project-1-dark.html
@@ -1,5 +1,5 @@
 <div class="container ajax-container bg-dark-2">
-  <h2 class="text-6 text-white font-weight-600 text-center mb-4">Project Title 1</h2>
+  <h2 class="text-6 text-white font-weight-600 text-center mb-4">Le Mas des Fées' website</h2>
   <div class="row">
     <div class="col-sm-7 mb-4 mb-md-0">
       <div class="owl-carousel owl-theme single-slideshow" data-autoplay="true" data-loop="true" data-nav="true" data-items="1">
@@ -10,14 +10,14 @@
     </div>
     <div class="col-sm-5">
       <h4 class="text-4 text-white font-weight-600">Project Info:</h4>
-      <p class="text-muted">Quidam lisque persius interesset his et, in quot quidam persequeris vim, ad mea essent possim iriure. Lisque persius interesset his et, in quot quidam persequeris vim, ad mea essent possim iriure.</p>
+      <p class="text-muted">Professional WordPress website developped from scratch. Charming guesthouse in the south of France, near Avignon. Using Sailing theme, Yoast SEO, Elementor, Slider Revolution and more.</p>
       <h4 class="text-4 text-white font-weight-600 mt-4">Project Details:</h4>
       <ul class="list-style-2 list-style-light text-white-50">
-        <li class=""><span class="text-light font-weight-600 mr-2">Client:</span>Ruby Clinton</li>
-        <li class=""><span class="text-light font-weight-600 mr-2">Industry:</span>Art & Design</li>
-        <li class=""><span class="text-light font-weight-600 mr-2">Technologies:</span>iOS, HTML5, CSS3, PHP, Java</li>
-        <li class=""><span class="text-light font-weight-600 mr-2">Date:</span>July 16, 2019</li>
-        <li class=""><span class="text-light font-weight-600 mr-2">URL:</span><a href="#" target="_blank">www.example.com</a></li>
+        <li class=""><span class="text-light font-weight-600 mr-2">Client:</span>Jean-François Bourdie</li>
+        <li class=""><span class="text-light font-weight-600 mr-2">Industry:</span>Guesthouse</li>
+        <li class=""><span class="text-light font-weight-600 mr-2">Technologies:</span>WordPress, CSS, Elementor, Yoast SEO, Slider Revolution...</li>
+        <li class=""><span class="text-light font-weight-600 mr-2">Date:</span>October, 2020</li>
+        <li class=""><span class="text-light font-weight-600 mr-2">URL:</span><a href="www.lemasdesfees.com" target="_blank">www.lemasdesfees.com</a></li>
       </ul>
       <div class="row no-gutters align-items-center">
         <div class="col-auto text-light font-weight-600">Share: </div>
