Updated projects and ajax, almost finished

--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
               <div class="col-lg-10 mx-auto text-center">
                 <h2 class="text-16 font-weight-600 text-white mb-2 mb-md-3">Hello! I'm Hugo</h2>
                 <div class="typed-strings">
-                  <p>Engeneering student at INSA Lyon</p>
+                  <p>Engineering student at INSA Lyon</p>
                   <p>Web Developper</p>
                   <p>IT Teacher on Superprof</p>
                   <p>Ticket office manager</p>
@@ -229,12 +229,12 @@
           </div>
           <div class="bg-dark shadow-sm rounded mb-5">
             <div class="row no-gutters">
-              <div class="col-lg-6 align-self-center"> <img class="img-fluid d-block rounded" src="images/projects/project-6.jpg" alt=""> </div>
+              <div class="col-lg-6 align-self-center"> <img class="img-fluid d-block rounded" src="images/projects/researchpaper.png" alt=""> </div>
               <div class="col-lg-6 align-self-center">
                 <div class="p-5">
                   <div class="badge badge-info text-1 font-weight-500 px-3 py-2 rounded-pill mb-3">Category</div>
-                  <h3 class="text-10 text-white font-weight-700 mb-3">Project Title</h3>
-                  <p class="text-3 text-muted mb-4">Quidam persius interesset his et, in quot quidam persequeris vim, ad mea essent possim iriure. persius interesset his et, in quot quidam persequeris.</p>
+                  <h3 class="text-10 text-white font-weight-700 mb-3">French public services scraping</h3>
+                  <p class="text-3 text-muted mb-4">We studied french public services websites, apps, e-mails to find if trackers are present. We also organised data to do stats about it. We published a research paper about this project.</p>
                   <a href="ajax/portfolio-ajax-project-6-dark.html" class="btn btn-light popup-ajax">See more</a> </div>
               </div>
             </div>
@@ -243,22 +243,22 @@
             <div class="row no-gutters">
               <div class="col-lg-6 align-self-center order-1 order-lg-0">
                 <div class="p-5">
-                  <div class="badge badge-info text-1 font-weight-500 px-3 py-2 rounded-pill mb-3">Category</div>
-                  <h3 class="text-10 text-white font-weight-700 mb-3">Project Title</h3>
-                  <p class="text-3 text-muted mb-4">Quidam persius interesset his et, in quot quidam persequeris vim, ad mea essent possim iriure. persius interesset his et, in quot quidam persequeris.</p>
+                <div class="badge badge-info text-1 font-weight-500 px-3 py-2 rounded-pill mb-3">Category</div>
+                <h3 class="text-10 text-white font-weight-700 mb-3">Plan Your Murder Android App</h3>
+                  <p class="text-3 text-muted mb-4">Plan Your Murder is a project to make people able to play murder parties quickly with your friends through an app and webapp.</p>
                   <a href="ajax/portfolio-ajax-project-9-dark.html" class="btn btn-light popup-ajax">See more</a> </div>
               </div>
-              <div class="col-lg-6 align-self-center order-0 order-lg-1"> <img class="img-fluid d-block rounded" src="images/projects/project-9.jpg" alt=""> </div>
+              <div class="col-lg-6 align-self-center order-0 order-lg-1"> <img class="img-fluid d-block rounded" src="images/projects/PlanYourMurder.png" alt=""> </div>
             </div>
           </div>
           <div class="bg-dark shadow-sm rounded mb-4">
             <div class="row no-gutters">
-              <div class="col-lg-6 align-self-center"> <img class="img-fluid d-block rounded" src="images/projects/project-11.jpg" alt=""> </div>
+              <div class="col-lg-6 align-self-center"> <img class="img-fluid d-block rounded" src="images/projects/ProjetMyPuzzle.png" alt=""> </div>
               <div class="col-lg-6 align-self-center">
                 <div class="p-5">
                   <div class="badge badge-info text-1 font-weight-500 px-3 py-2 rounded-pill mb-3">Category</div>
-                  <h3 class="text-10 text-white font-weight-700 mb-3">Project Title</h3>
-                  <p class="text-3 text-muted mb-4">Quidam persius interesset his et, in quot quidam persequeris vim, ad mea essent possim iriure. persius interesset his et, in quot quidam persequeris.</p>
+                  <h3 class="text-10 text-white font-weight-700 mb-3">Freak out Project</h3>
+                  <p class="text-3 text-muted mb-4">The freak out project is a card game coded in Python using multithreading</p>
                   <a href="ajax/portfolio-ajax-project-11-dark.html" class="btn btn-light popup-ajax">See more</a> </div>
               </div>
             </div>
