--- a/ajax/portfolio-ajax-project-1-dark.html
+++ b/ajax/portfolio-ajax-project-1-dark.html
@@ -3,9 +3,9 @@
   <div class="row">
     <div class="col-sm-7 mb-4 mb-md-0">
       <div class="owl-carousel owl-theme single-slideshow" data-autoplay="true" data-loop="true" data-nav="true" data-items="1">
-        <div class="item"> <img class="img-fluid" alt="" src="images/projects/project-14.jpg"> </div>
-        <div class="item"> <img class="img-fluid" alt="" src="images/projects/project-15.jpg"> </div>
-        <div class="item"> <img class="img-fluid" alt="" src="images/projects/project-16.jpg"> </div>
+        <div class="item"> <img class="img-fluid" alt="" src="images/projects/Screenshot_407.png"> </div>
+        <div class="item"> <img class="img-fluid" alt="" src="images/projects/Screenshot_408.png"> </div>
+        <div class="item"> <img class="img-fluid" alt="" src="images/projects/Screenshot_409.png"> </div>
       </div>
     </div>
     <div class="col-sm-5">
