--- a/ajax/portfolio-ajax-project-2-dark.html
+++ b/ajax/portfolio-ajax-project-2-dark.html
@@ -1,18 +1,18 @@
 <div class="container ajax-container bg-dark-2">
-  <h2 class="text-6 text-white font-weight-600 text-center mb-4">Project Title 2</h2>
+  <h2 class="text-6 text-white font-weight-600 text-center mb-4">French public services scraping</h2>
   <div class="row">
     <div class="col-md-7 mb-4 mb-md-0"> <img class="img-fluid" alt="" src="images/projects/project-2.jpg"> </div>
     <div class="col-md-5">
       <h4 class="text-4 text-white font-weight-600">Project Info:</h4>
-      <p class="text-muted">Quidam lisque persius interesset his et, in quot quidam persequeris vim, ad mea essent possim iriure. Lisque persius interesset his et, in quot quidam persequeris vim, ad mea essent possim iriure.</p>
-      <p class="text-muted">Lisque persius interesset his et, in quot quidam persequeris vim, ad mea essent possim iriure.</p>
+      <p class="text-muted">We studied french public services websites, apps, e-mails to find if trackers are present. We also organised data to do stats about it. We published a research paper about this project.</p>
+      <p class="text-muted">It uses python scripts to get public services apps from the playstore with keywords. We verify manually to check if it can be qualified or not as a public service. We run then Exodus Privacy and put all the results in CSV, in order to treat it.</p>
       <h4 class="text-4 text-white font-weight-600 mt-4">Project Details:</h4>
       <ul class="list-style-2 list-style-light text-white-50">
-        <li class=""><span class="text-light font-weight-600 mr-2">Client:</span>Jonn Cena</li>
-        <li class=""><span class="text-light font-weight-600 mr-2">Industry:</span>Puzzle Game</li>
-        <li class=""><span class="text-light font-weight-600 mr-2">Technologies:</span>iOS, HTML5, CSS3, PHP, Java</li>
-        <li class=""><span class="text-light font-weight-600 mr-2">Date:</span>Aug 05, 2019</li>
-        <li class=""><span class="text-light font-weight-600 mr-2">URL:</span><a href="#" target="_blank">www.example.com</a></li>
+        <li class=""><span class="text-light font-weight-600 mr-2">Client:</span>CITI Lab</li>
+        <li class=""><span class="text-light font-weight-600 mr-2">Industry:</span>Research</li>
+        <li class=""><span class="text-light font-weight-600 mr-2">Technologies:</span>Python, Exodus-Privacy's repo</li>
+        <li class=""><span class="text-light font-weight-600 mr-2">Date:</span>June 2020</li>
+        <li class=""><span class="text-light font-weight-600 mr-2">URL:</span><a href="https://arxiv.org/abs/2007.01074" target="_blank">https://arxiv.org/abs/2007.01074</a></li>
       </ul>
       <div class="row no-gutters align-items-center">
         <div class="col-auto text-light font-weight-600">Share: </div>
