Added descriptions of project and contact form

--- a/index.html
+++ b/index.html
@@ -235,7 +235,7 @@
                   <div class="badge badge-info text-1 font-weight-500 px-3 py-2 rounded-pill mb-3">Category</div>
                   <h3 class="text-10 text-white font-weight-700 mb-3">French public services scraping</h3>
                   <p class="text-3 text-muted mb-4">We studied french public services websites, apps, e-mails to find if trackers are present. We also organised data to do stats about it. We published a research paper about this project.</p>
-                  <a href="ajax/portfolio-ajax-project-6-dark.html" class="btn btn-light popup-ajax">See more</a> </div>
+                  <a href="ajax/portfolio-ajax-project-2-dark.html" class="btn btn-light popup-ajax">See more</a> </div>
               </div>
             </div>
           </div>
@@ -246,7 +246,7 @@
                 <div class="badge badge-info text-1 font-weight-500 px-3 py-2 rounded-pill mb-3">Category</div>
                 <h3 class="text-10 text-white font-weight-700 mb-3">Plan Your Murder Android App</h3>
                   <p class="text-3 text-muted mb-4">Plan Your Murder is a project to make people able to play murder parties quickly with your friends through an app and webapp.</p>
-                  <a href="ajax/portfolio-ajax-project-9-dark.html" class="btn btn-light popup-ajax">See more</a> </div>
+                  <a href="ajax/portfolio-ajax-project-3-dark.html" class="btn btn-light popup-ajax">See more</a> </div>
               </div>
               <div class="col-lg-6 align-self-center order-0 order-lg-1"> <img class="img-fluid d-block rounded" src="images/projects/PlanYourMurder.png" alt=""> </div>
             </div>
@@ -259,7 +259,7 @@
                   <div class="badge badge-info text-1 font-weight-500 px-3 py-2 rounded-pill mb-3">Category</div>
                   <h3 class="text-10 text-white font-weight-700 mb-3">Freak out Project</h3>
                   <p class="text-3 text-muted mb-4">The freak out project is a card game coded in Python using multithreading</p>
-                  <a href="ajax/portfolio-ajax-project-11-dark.html" class="btn btn-light popup-ajax">See more</a> </div>
+                  <a href="ajax/portfolio-ajax-project-4-dark.html" class="btn btn-light popup-ajax">See more</a> </div>
               </div>
             </div>
           </div>
@@ -274,7 +274,7 @@
       <div class="container px-lg-4 px-xl-5">
         <div class="row">
           <div class="col-lg-9 mx-auto text-center">
-            <h2 class="text-8 text-white font-weight-600 line-height-4 mb-5">Send us a note, and let’s get started on your project today!</h2>
+            <h2 class="text-8 text-white font-weight-600 line-height-4 mb-5">You can contact me just below</h2>
           </div>
         </div>
         <div class="row">
@@ -293,7 +293,7 @@
                 </div>
               </div>
               <div class="form-group">
-                <textarea name="form-message" class="form-control" rows="3" required placeholder="Tell us more about your needs........"></textarea>
+                <textarea name="form-message" class="form-control" rows="3" required placeholder="Your message"></textarea>
               </div>
               <p class="text-center mt-5 mb-0">
                 <button id="submit-btn" class="btn btn-outline-light shadow-none d-inline-flex" type="submit">Send Message</button>
