--- a/ajax/portfolio-ajax-project-2-dark.html
+++ b/ajax/portfolio-ajax-project-2-dark.html
@@ -1,7 +1,7 @@
 <div class="container ajax-container bg-dark-2">
   <h2 class="text-6 text-white font-weight-600 text-center mb-4">French public services scraping</h2>
   <div class="row">
-    <div class="col-md-7 mb-4 mb-md-0"> <img class="img-fluid" alt="" src="images/projects/project-2.jpg"> </div>
+    <div class="col-md-7 mb-4 mb-md-0"> <img class="img-fluid" alt="" src="../images/projects/researchpaper.png"> </div>
     <div class="col-md-5">
       <h4 class="text-4 text-white font-weight-600">Project Info:</h4>
       <p class="text-muted">We studied french public services websites, apps, e-mails to find if trackers are present. We also organised data to do stats about it. We published a research paper about this project.</p>
