--- a/ajax/portfolio-ajax-project-3-dark.html
+++ b/ajax/portfolio-ajax-project-3-dark.html
@@ -1,13 +1,7 @@
 <div class="container ajax-container bg-dark-2">
   <h2 class="text-6 text-white font-weight-600 text-center mb-4">Plan Your Murder Android App</h2>
   <div class="row">
-    <div class="col-sm-7 mb-4 mb-md-0">
-      <div class="owl-carousel owl-theme single-slideshow" data-autoplay="true" data-loop="true" data-nav="true" data-items="1">
-        <div class="item"> <img class="img-fluid" alt="" src="images/projects/project-17.jpg"> </div>
-        <div class="item"> <img class="img-fluid" alt="" src="images/projects/project-14.jpg"> </div>
-        <div class="item"> <img class="img-fluid" alt="" src="images/projects/project-16.jpg"> </div>
-      </div>
-    </div>
+    <div class="col-md-7 mb-4 mb-md-0"> <img class="img-fluid" alt="" src="../images/projects/PlanYourMurder.png"> </div>
     <div class="col-sm-5">
       <h4 class="text-4 text-white font-weight-600">Project Info:</h4>
       <p class="text-muted">Plan Your Murder is a project to make people able to play murder parties quickly with your friends through an app and webapp.</p>
