--- a/ajax/portfolio-ajax-project-4-dark.html
+++ b/ajax/portfolio-ajax-project-4-dark.html
@@ -1,17 +1,17 @@
 <div class="container ajax-container bg-dark-2">
-  <h2 class="text-6 text-white font-weight-600 text-center mb-4">Project Title 4</h2>
+  <h2 class="text-6 text-white font-weight-600 text-center mb-4">Freak Out Project</h2>
   <div class="row">
-    <div class="col-md-7 mb-4 mb-md-0"> <img class="img-fluid" alt="" src="images/projects/project-4.jpg"> </div>
+    <div class="col-md-7 mb-4 mb-md-0"> <img class="img-fluid" alt="" src="../images/projects/ProjetFreakOut.png"> </div>
     <div class="col-md-5">
       <h4 class="text-4 text-white font-weight-600">Project Info:</h4>
-      <p class="text-muted">Quidam lisque persius interesset his et, in quot quidam persequeris vim, ad mea essent possim iriure. Lisque persius interesset his et, in quot quidam persequeris vim, ad mea essent possim iriure.</p>
+      <p class="text-muted">The freak out project is a card game coded in Python using multithreading</p>
       <h4 class="text-4 text-white font-weight-600 mt-4">Project Details:</h4>
       <ul class="list-style-2 list-style-light text-white-50">
-        <li class=""><span class="text-light font-weight-600 mr-2">Client:</span>James Maxwell</li>
-        <li class=""><span class="text-light font-weight-600 mr-2">Industry:</span>Finance</li>
-        <li class=""><span class="text-light font-weight-600 mr-2">Technologies:</span>Android, PHP, Java, HTML5, CSS3</li>
-        <li class=""><span class="text-light font-weight-600 mr-2">Date:</span>Nov 22, 2018</li>
-        <li class=""><span class="text-light font-weight-600 mr-2">URL:</span><a href="#" target="_blank">www.example.com</a></li>
+        <li class=""><span class="text-light font-weight-600 mr-2">Client:</span>Programmation Parallèle et Concurrente course</li>
+        <li class=""><span class="text-light font-weight-600 mr-2">Industry:</span>Programming</li>
+        <li class=""><span class="text-light font-weight-600 mr-2">Technologies:</span>Python</li>
+        <li class=""><span class="text-light font-weight-600 mr-2">Date:</span>December 2019</li>
+        <li class=""><span class="text-light font-weight-600 mr-2">URL:</span><a href="https://github.com/HugoCo/ProjetFreakOut" target="_blank">https://github.com/HugoCo/ProjetFreakOut</a></li>
       </ul>
       <div class="row no-gutters align-items-center">
         <div class="col-auto text-light font-weight-600">Share: </div>
