--- a/index.html
+++ b/index.html
@@ -321,88 +321,13 @@
     <div class="container px-lg-4 px-xl-5">
       <div class="row">
         <div class="col-lg-6 text-center text-lg-left">
-          <p class="mb-3 mb-lg-0">Copyright &copy; 2020 <a href="#">Doon</a>. All Rights Reserved.</p>
-        </div>
-        <div class="col-lg-6">
-          <ul class="nav nav-separator justify-content-center justify-content-lg-end">
-            <li class="nav-item"> <a class="nav-link" data-toggle="modal" data-target="#terms-policy" href="#">Terms of Use</a></li>
-            <li class="nav-item"> <a class="nav-link" data-toggle="modal" data-target="#terms-policy" href="#">Privacy Policy</a></li>
-            <li class="nav-item"> <a class="nav-link" data-toggle="modal" data-target="#disclaimer" href="#">Disclaimer</a></li>
-          </ul>
+          <p class="mb-3 mb-lg-0">Made by Hugo Courté with Doon theme.</p>
         </div>
       </div>
     </div>
   </footer>
   <!-- Footer end --> 
-  
-</div>
-<!-- Document Wrapper end --> 
-
-<!-- Back to Top
-============================================= --> 
-<a id="back-to-top" class="rounded" data-toggle="tooltip" title="Back to Top" href="javascript:void(0)"><i class="fa fa-chevron-up"></i></a> 
-
-<!-- Terms & Policy Modal
-================================== -->
-<div id="terms-policy" class="modal fade" role="dialog" aria-hidden="true">
-  <div class="modal-dialog modal-xl modal-dialog-centered" role="document">
-    <div class="modal-content bg-dark-2 text-light">
-      <div class="modal-header border-dark">
-        <h5 class="modal-title text-white">Terms & Policy</h5>
-        <button type="button" class="close font-weight-400 text-white" data-dismiss="modal" aria-label="Close"> <span aria-hidden="true">&times;</span> </button>
-      </div>
-      <div class="modal-body p-4">
-        <p class="text-3">Quidam lisque persius interesset his et, in quot quidam persequeris vim, ad mea essent possim iriure. Lisque persius interesset his et, in quot quidam persequeris vim, ad mea essent possim iriure. lisque persius interesset his et, in quot quidam mea essent possim iriure.</p>
-        <h3 class="text-white mb-3 mt-4">Terms of Use</h3>
-        <p>Lisque persius interesset his et, in quot quidam persequeris vim, ad mea essent possim iriure. Lisque persius interesset his et, in quot quidam persequeris vim, ad mea essent possim iriure. lisque persius interesset his et, in quot quidam mea essent possim iriure.</p>
-        <h5 class="text-4 text-white">Part I – Information Doon collects and controls</h5>
-        <p>Persius interesset his et, in quot quidam persequeris vim, ad mea essent possim iriure. Lisque persius interesset his et, in quot quidam persequeris vim, ad mea essent possim iriure.</p>
-        <h5 class="text-4 text-white">Part II – Information that Doon processes on your behalf</h5>
-        <p>Lisque persius interesset his et, in quot quidam persequeris vim, ad mea essent possim iriure. Lisque persius interesset his et, in quot quidam persequeris vim.</p>
-        <h5 class="text-4 text-white">Part III – General</h5>
-        <p>Interesset his et, in quot quidam persequeris vim, ad mea essent possim iriure. Lisque persius interesset his et, in quot quidam persequeris vim, ad mea essent possim iriure. lisque persius interesset his et, in quot quidam mea essent possim iriure.</p>
-        <h3 class="text-white mb-3 mt-4">Privacy Policy</h3>
-        <p>Quidam lisque persius interesset his et, in quot quidam persequeris vim, ad mea essent possim iriure. Lisque persius interesset his et, in quot quidam persequeris vim, ad mea essent possim iriure. lisque persius interesset his et, in quot quidam mea essent possim iriure.</p>
-        <ol class="line-height-5">
-          <li>Lisque persius interesset his et, in quot quidam persequeris vim, ad mea essent possim iriure.</li>
-          <li>Quidam lisque persius interesset his et, Lisque persius interesset his et, in quot quidam persequeris vim, ad mea essent possim iriure.</li>
-          <li>In quot quidam persequeris vim, ad mea essent possim iriure. Quidam lisque persius interesset his et.</li>
-          <li>Quidam lisque persius interesset his et, Lisque persius interesset his et.</li>
-          <li>Interesset his et, Lisque persius interesset his et, in quot quidam persequeris vim, ad mea essent possim iriure.</li>
-          <li>Persius interesset his et, Lisque persius interesset his et, in quot quidam persequeris vim, ad mea essent possim iriure.</li>
-          <li>Quot quidam persequeris vim Quidam lisque persius interesset his et, Lisque persius interesset his et, in quot quidam persequeris vim, ad mea essent possim iriure.</li>
-        </ol>
-      </div>
-    </div>
-  </div>
-</div>
-<!-- Terms & Policy Modal End --> 
-
-<!-- Disclaimer Modal
-================================== -->
-<div id="disclaimer" class="modal fade" role="dialog" aria-hidden="true">
-  <div class="modal-dialog modal-lg modal-dialog-centered" role="document">
-    <div class="modal-content bg-dark-2 text-light">
-      <div class="modal-header border-dark">
-        <h5 class="modal-title text-white">Copyright & Disclaimer</h5>
-        <button type="button" class="close font-weight-400 text-white" data-dismiss="modal" aria-label="Close"> <span aria-hidden="true">&times;</span> </button>
-      </div>
-      <div class="modal-body p-4">
-        <p class="text-3">Quidam lisque persius interesset his et, in quot quidam persequeris vim, ad mea essent possim iriure. Lisque persius interesset his et, in quot quidam persequeris vim, ad mea essent possim iriure. lisque persius interesset his et, in quot quidam mea essent possim iriure.</p>
-        <ul class="line-height-5">
-          <li>Lisque persius interesset his et, in quot quidam persequeris vim, ad mea essent possim iriure.</li>
-          <li>Quidam lisque persius interesset his et, Lisque persius interesset his et, in quot quidam persequeris vim, ad mea essent possim iriure.</li>
-          <li>In quot quidam persequeris vim, ad mea essent possim iriure. Quidam lisque persius interesset his et.</li>
-          <li>Quidam lisque persius interesset his et, Lisque persius interesset his et.</li>
-          <li>Interesset his et, Lisque persius interesset his et, in quot quidam persequeris vim, ad mea essent possim iriure.</li>
-          <li>Persius interesset his et, Lisque persius interesset his et, in quot quidam persequeris vim, ad mea essent possim iriure.</li>
-          <li>Quot quidam persequeris vim Quidam lisque persius interesset his et, Lisque persius interesset his et, in quot quidam persequeris vim, ad mea essent possim iriure.</li>
-        </ul>
-      </div>
-    </div>
-  </div>
-</div>
-<!-- Disclaimer Modal End --> 
+   
 
 
 <!-- JavaScript --> 
