--- a/index.html
+++ b/index.html
@@ -45,9 +45,9 @@
         
         <!-- Logo --> 
         <a href="index.html" class="bg-dark-2 rounded-pill p-2 mt-lg-2 mb-lg-2 d-none d-lg-inline-block">
-        	<img class="img-fluid rounded-pill d-block" src="images/hugo160x160.png" title="I'm David" alt="">
+        	<img class="img-fluid rounded-pill d-block" src="images/hugo160x160.png" title="I'm Hugo" alt="">
         </a>
-        <a class="logo text-center text-capitalize d-lg-block mb-lg-4" href="index.html" title="Doon">
+        <a class="logo text-center text-capitalize d-lg-block mb-lg-4" href="index.html" title="">
         	<h1 class="text-6 text-white mb-0">Hugo</h1>
         </a> 
         <!-- Logo End -->
@@ -62,9 +62,9 @@
           </ul>
         </div>
         <ul class="social-icons social-icons-light social-icons-sm mt-lg-4 ml-auto ml-lg-0 d-none d-sm-flex">
-          <li class="social-icons-facebook"><a data-toggle="tooltip" href="http://www.facebook.com/" target="_blank" title="" data-original-title="Facebook"><i class="fab fa-facebook-f"></i></a></li>
-          <li class="social-icons-twitter"><a data-toggle="tooltip" href="http://www.twitter.com/Courte_Hugo" target="_blank" title="" data-original-title="Twitter"><i class="fab fa-twitter"></i></a></li>
-          <li class="social-icons-dribbble"><a data-toggle="tooltip" href="http://www.dribbble.com/" target="_blank" title="" data-original-title="Dribbble"><i class="fab fa-dribbble"></i></a></li>
+          <li class="social-icons-github"><a data-toggle="tooltip" href="https://www.github.com/HugoCo" target="_blank" title="" data-original-title="GitHub"><i class="fab fa-github"></i></a></li>
+          <li class="social-icons-twitter"><a data-toggle="tooltip" href="https://www.twitter.com/Courte_Hugo" target="_blank" title="" data-original-title="Twitter"><i class="fab fa-twitter"></i></a></li>
+          <li class="social-icons-linkedin"><a data-toggle="tooltip" href="https://www.linkedin.com/in/hugo-courte/" target="_blank" title="" data-original-title="LinkedIn"><i class="fab fa-linkedin"></i></a></li>
         </ul>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#header-nav"><span></span><span></span><span></span></button>
       </div>
@@ -111,7 +111,7 @@
       <div class="container px-lg-4 px-xl-5">
         <div class="row">
           <div class="col-lg-9 mx-auto text-center">
-            <h2 class="text-8 text-light font-weight-600 line-height-4 mb-4">I study Telecommunications and IT as student at INSA Lyon. We mainly work on networks, programming and communications systems.</h2>
+            <h2 class="text-8 text-light font-weight-600 line-height-4 mb-4">I study Telecommunications and CS as student at INSA Lyon. We mainly work on networks, programming and communications systems.</h2>
           </div>
           <div class="col-lg-10 mx-auto text-center">
             <p class="lead text-light">I enjoy studying at INSA but I'm thrilled to work on side projects : cybersecurity CTFs, web developpement, music festival organization, teaching programming. Every experience enriches my life.</p>
@@ -303,9 +303,9 @@
           </div>
         </div>
         <ul class="social-icons social-icons-lg social-icons-muted justify-content-center">
-          <li class="social-icons-facebook"><a data-toggle="tooltip" href="http://www.facebook.com/" target="_blank" title="" data-original-title="Facebook"><i class="fab fa-facebook-f"></i></a></li>
-          <li class="social-icons-twitter"><a data-toggle="tooltip" href="http://www.twitter.com/" target="_blank" title="" data-original-title="Twitter"><i class="fab fa-twitter"></i></a></li>
-          <li class="social-icons-dribbble"><a data-toggle="tooltip" href="http://www.dribbble.com/" target="_blank" title="" data-original-title="Dribbble"><i class="fab fa-dribbble"></i></a></li>
+          <li class="social-icons-github"><a data-toggle="tooltip" href="https://www.github.com/HugoCo" target="_blank" title="" data-original-title="GitHub"><i class="fab fa-github"></i></a></li>
+          <li class="social-icons-twitter"><a data-toggle="tooltip" href="https://www.twitter.com/Courte_Hugo" target="_blank" title="" data-original-title="Twitter"><i class="fab fa-twitter"></i></a></li>
+          <li class="social-icons-linkedin"><a data-toggle="tooltip" href="https://www.linkedin.com/in/hugo-courte/" target="_blank" title="" data-original-title="LinkedIn"><i class="fab fa-linkedin"></i></a></li>
         </ul>
       </div>
     </section>
@@ -317,9 +317,7 @@
   
   <!-- Footer
   ============================================= -->
-  <footer id="footer" class="section bg-dark footer-text-light">
-    <div class="container px-lg-4 px-xl-5">
-      <div class="row">
+  <footer id="footer" class="section bg-dark footer-text-lightIT
         <div class="col-lg-6 text-center text-lg-left">
           <p class="mb-3 mb-lg-0">Made by Hugo Courté with Doon theme.</p>
         </div>
