Added resume, fix

--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
             <li class="nav-item"><a class="nav-link smooth-scroll" href="#about">About Me</a></li>
             <li class="nav-item"><a class="nav-link smooth-scroll" href="#services">What I Do</a></li>
             <li class="nav-item"><a class="nav-link smooth-scroll" href="#work">Portfolio</a></li>
-            <li class="nav-item"><a class="nav-link smooth-scroll" href="#contact">Contact Me</a></li>
+            <li class="nav-item"><a class="nav-link smooth-scroll" href="#contact">Resume & Contact Me</a></li>
           </ul>
         </div>
         <ul class="social-icons social-icons-light social-icons-sm mt-lg-4 ml-auto ml-lg-0 d-none d-sm-flex">
@@ -275,34 +275,11 @@
         <div class="row">
           <div class="col-lg-9 mx-auto text-center">
             <h2 class="text-8 text-white font-weight-600 line-height-4 mb-5">You can contact me just below</h2>
+            <a href="CV.pdf" download="CV.pdf" class="btn btn-light popup-ajax">Download CV</a> </div>
           </div>
         </div>
-        <div class="row">
-          <div class="col-lg-10 col-xl-9 mx-auto">
-            <form id="contact-form" class="form-border form-border-light" action="php/mail.php" method="post">
-              <div class="row">
-                <div class="col-md-6">
-                  <div class="form-group">
-                    <input name="name" type="text" class="form-control" required placeholder="Name">
-                  </div>
-                </div>
-                <div class="col-md-6">
-                  <div class="form-group">
-                    <input name="email" type="email" class="form-control" required placeholder="Email">
-                  </div>
-                </div>
-              </div>
-              <div class="form-group">
-                <textarea name="form-message" class="form-control" rows="3" required placeholder="Your message"></textarea>
-              </div>
-              <p class="text-center mt-5 mb-0">
-                <button id="submit-btn" class="btn btn-outline-light shadow-none d-inline-flex" type="submit">Send Message</button>
-              </p>
-              <p class="text-muted text-center mt-4">I will get back to you in less than 24 hours.</p>
-            </form>
-          </div>
-        </div>
-        <ul class="social-icons social-icons-lg social-icons-muted justify-content-center">
+        
+        <ul class="social-icons social-icons-lg social-icons-muted justify-content-center" style="padding: 40px;">
           <li class="social-icons-github"><a data-toggle="tooltip" href="https://www.github.com/HugoCo" target="_blank" title="" data-original-title="GitHub"><i class="fab fa-github"></i></a></li>
           <li class="social-icons-twitter"><a data-toggle="tooltip" href="https://www.twitter.com/Courte_Hugo" target="_blank" title="" data-original-title="Twitter"><i class="fab fa-twitter"></i></a></li>
           <li class="social-icons-linkedin"><a data-toggle="tooltip" href="https://www.linkedin.com/in/hugo-courte/" target="_blank" title="" data-original-title="LinkedIn"><i class="fab fa-linkedin"></i></a></li>
@@ -319,7 +296,7 @@
   ============================================= -->
   <footer id="footer" class="section bg-dark footer-text-lightIT
         <div class="col-lg-6 text-center text-lg-left">
-          <p class="mb-3 mb-lg-0">Made by Hugo Courté with Doon theme.</p>
+          <p class="mb-3 mb-lg-0">Made by Hugo Courté</p>
         </div>
       </div>
     </div>
